--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.8.3",
     "firebase": "^11.5.0",
     "framer-motion": "^12.5.0",
+    "lucide-react": "^0.484.0",
     "motion": "^12.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
