--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/is-prop-valid": "^1.3.1",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
+    "emoji-picker-react": "^4.12.2",
     "firebase": "^11.5.0",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.484.0",
@@ -22,7 +23,8 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
